@@ -4,8 +4,9 @@ Revision history for Perl extension FSA::Rules.
       - Modified Synopsis to show off the result() method.
       - Other minor documentation fixes spotted by Curtis Poe.
       - Added graph support. Implementation by Curtis Poe.
-      - Added at() method.  Implmentation by Curtis Poe.
+      - Added at() method. Implmentation by Curtis Poe.
       - Simplified synopsis by Curtis Poe.
+      - Added "state_class" parameter to simplify subclassing FSA::State.
 
 0.10  2004-12-17T23:29:54
       - Moved state-specific methods to new FSA::State class. This is a
